--- a/css/index.css
+++ b/css/index.css
@@ -25,12 +25,12 @@ body {
     width: 500px;
 }
 
-#here {
+#here-text {
     left: 0;
     color: White;
 }
 
-#there {
+#there-text {
     left: 500px;
     color: Black;
 }
