--- a/css/index.css
+++ b/css/index.css
@@ -25,6 +25,10 @@ body {
     width: 500px;
 }
 
+circle {
+    cursor: pointer;
+}
+
 #here-text {
     left: 0;
     color: White;
@@ -49,6 +53,12 @@ body {
 .date {
     font-size: 40px;
     opacity: 0;
+}
+
+.choose {
+    font-size: 50px;
+    padding-top: 70px;
+    cursor: pointer;
 }
 
 #love-words-title {
